@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.705 2005-09-26 23:36:32 castaglia Exp $
+$Id: NEWS,v 1.706 2005-09-27 16:08:30 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -22,6 +22,7 @@ CVS
 - Bug 2689 - Parser does not complain about unclosed configuration sections.
 - Bug 2695 - Client IP/host is not logged when client exits.
 - Bug 2697 - Improper SSL session shutdown sequence used for some FTPS clients.
+- Bug 2682 - Signals can interrupt privilege switching.
 
 1.3.0rc2 - Released 24-Jul-2005
 --------------------------------
